# tbot

./: .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  clippy.toml  errors  readme.md  rustfmt.toml
examples/: attachments.rs  commands.rs  download.rs  echo.rs  entities.rs  game.rs  get_me.rs  keyboard.rs  location.rs  messenger.rs  payment.rs  polls.rs  polls_update.rs  predicates.rs  proxy.rs  questionary.rs  send_location.rs  send_poll.rs  sticker_packs.rs  tutorial.rs  webhook.rs
src/: bot.rs  compositors.rs  connectors.rs  contexts.rs  download_file.rs  errors.rs  event_loop.rs  internal.rs  lib.rs  markup.rs  methods.rs  multipart.rs  predicates.rs  proxy.rs  state.rs  token.rs  types.rs  updates.rs  util.rs
src/bot/: builder.rs  handlers_macros.rs  inner_bot.rs  mock_bot.rs  mod.rs  polling.rs  token.rs  webhook.rs
src/compositors/: state.rs
src/contexts/: animated_sticker.rs  animation.rs  any_update.rs  audio.rs  changed_auto_delete_timer.rs  chat_member.rs  chosen_inline.rs  command.rs  connected_website.rs  contact.rs  created_group.rs  data_callback.rs  deleted_chat_photo.rs  dice.rs  document.rs  edited_animation.rs  edited_audio.rs  edited_command.rs  edited_document.rs  edited_location.rs  edited_photo.rs  edited_text.rs  edited_video.rs  ended_voice_chat.rs  fields.rs  game.rs  game_callback.rs  inline.rs  inline_query.rs  invited_voice_chat_participants.rs  invoice.rs  left_member.rs  location.rs  macros.rs  message_context.rs  methods.rs  migration.rs  mock_bot.rs  my_chat_member.rs  new_chat_photo.rs  (+27 more)
src/contexts/fields/: album.rs  attachments.rs  callback.rs  context.rs  edited_message.rs  forward.rs  media_message.rs  message.rs  messages.rs  texts.rs
src/contexts/macros/: callback.rs  common.rs  edited_message.rs  media_message.rs  message_base.rs
src/contexts/methods/: callback.rs  chat_methods.rs  copyable.rs  forwardable.rs  message.rs  pinnable.rs
src/contexts/traits/: callback.rs  chat_methods.rs  forwardable.rs  inline.rs  pinnable.rs
src/errors/: download.rs  http_webhook.rs  https_webhook.rs  method_call.rs  polling.rs  polling_setup.rs  webhook.rs
src/event_loop/: handlers_macros.rs  polling.rs  stateful.rs  webhook.rs
src/event_loop/polling/: schedule.rs
src/event_loop/webhook/: http.rs  https.rs
src/markup/: bold.rs  code_block.rs  html.rs  inline_code.rs  italic.rs  link.rs  markdown_v2.rs  raw.rs  strikethrough.rs  underline.rs
src/methods/: add_sticker_to_set.rs  answer_callback_query.rs  answer_inline_query.rs  answer_pre_checkout_query.rs  answer_shipping_query.rs  ban_chat_member.rs  call_method.rs  close.rs  copy_message.rs  create_chat_invite_link.rs  create_new_sticker_set.rs  delete_chat_photo.rs  delete_chat_sticker_set.rs  delete_message.rs  delete_sticker_from_set.rs  delete_webhook.rs  edit_chat_invite_link.rs  edit_inline_caption.rs  edit_inline_location.rs  edit_inline_media.rs  edit_inline_reply_markup.rs  edit_inline_text.rs  edit_message_caption.rs  edit_message_location.rs  edit_message_media.rs  edit_message_reply_markup.rs  edit_message_text.rs  export_chat_invite_link.rs  forward_message.rs  get_chat.rs  get_chat_administrators.rs  get_chat_member.rs  get_chat_member_count.rs  get_chat_members_count.rs  get_file.rs  get_inline_game_high_scores.rs  get_me.rs  get_message_game_high_scores.rs  get_my_commands.rs  get_sticker_set.rs  (+51 more)
src/methods/parameters/: notification_state.rs  web_page_preview_state.rs
src/predicates/: chat.rs  media.rs  message.rs  traits.rs
src/ser_mutlipart/: error.rs  mod.rs
src/state/: chats.rs  event_loop.rs  messages.rs  polling.rs
src/types/: animation.rs  audio.rs  bot_command.rs  callback.rs  callback_game.rs  callback_query.rs  chat.rs  chat_action.rs  chat_id.rs  chat_member.rs  chat_photo.rs  chat_types.rs  chosen_inline_result.rs  contact.rs  dice.rs  document.rs  file.rs  game.rs  game_high_score.rs  inline_message_id.rs  inline_query.rs  inline_query_result.rs  input_file.rs  input_media.rs  input_message_content.rs  interior_borrow.rs  invoice.rs  keyboard.rs  keyboards.rs  labeled_price.rs  location.rs  login_url.rs  mask_position.rs  message.rs  message_entity.rs  mod.rs  order_info.rs  parameters.rs  parse_mode.rs  passport.rs  (+20 more)
src/types/callback/: game.rs  query.rs
src/types/chat/: action.rs  id.rs  invite_link.rs  kind.rs  location.rs  member.rs  permissions.rs  photo.rs
src/types/file/: id.rs
src/types/game/: high_score.rs
src/types/inline_query/: id.rs  result.rs
src/types/inline_query_result/: article.rs  audio.rs  contact.rs  document.rs  game.rs  gifs.rs  location.rs  photo.rs  sticker.rs  thumb.rs  venue.rs  video.rs  voice.rs
src/types/input_file/: animation.rs  audio.rs  chat_photo.rs  document.rs  editable_media.rs  group_media.rs  media_group.rs  photo.rs  png_sticker.rs  sticker.rs  sticker_for_sticker_set.rs  sticker_set_thumb.rs  tgs_sticker.rs  thumb.rs  video.rs  video_note.rs  voice.rs
src/types/input_media/: group_media.rs  photo.rs  video.rs
src/types/input_message_content/: contact.rs  invoice.rs  location.rs  text.rs  venue.rs
src/types/keyboard/: any.rs  force_reply.rs  inline.rs  reply.rs
src/types/keyboards/: any_keyboard.rs  force_reply.rs  inline_keyboard.rs  reply_keyboard_markup.rs  reply_keyboard_remove.rs
src/types/message/: forward.rs  from.rs  id.rs  inline_markup.rs  kind.rs  text.rs  timer.rs
src/types/parameters/: allowed_updates.rs  bot_command.rs  callback_action.rs  chat_id.rs  flexibility.rs  invoice.rs  live_location.rs  notification_state.rs  parse_mode.rs  photo.rs  poll.rs  requirement.rs  send_to_provider_state.rs  text.rs  tip.rs  update_kind.rs  updates.rs  url_visibility.rs  web_page_preview_state.rs
src/types/passport/: credentials.rs  data.rs  element.rs  file.rs
src/types/pre_checkout_query/: id.rs
src/types/shipping/: address.rs  option.rs  query.rs
src/types/sticker/: mask_position.rs  set.rs
src/types/user/: id.rs  me.rs  profile_photos.rs
src/util/: chat_action_loop.rs  entities.rs
src/util/entities/: entity.rs  tests.rs
(+26 files in other folders)
