[package]
name = "tbot"
version = "0.6.7"
description = "Make cool Telegram bots with Rust easily."
repository = "https://gitlab.com/SnejUgal/tbot"
readme = "./readme.md"
license = "MIT"
authors = [
    "SnejUgal <contact@snejugal.ru>",
    "AlexStrNik <contact@alexstrnik.ru>",
]
edition = "2018"
keywords = [
    "telegram",
    "telegram-bot",
    "telegram-bot-api",
]
categories = [
    "api-bindings",
    "asynchronous",
]
exclude = ["examples"]

[dependencies]
hyper = { version = "0.14.2", features = ["client", "http1", "server"], default-features = false }
#hyper-proxy = { version = "0.8", default-features = false }
hyper-proxy = { git = "https://github.com/nagua/hyper-proxy", branch="upgrade-tokio", default-features = false }
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread", "net", "fs"] }
futures = "0.3"
serde_json = "1"
serde = { version = "1.0.34", features = ["derive"] }
hyper-tls = { version = "0.5",  optional = true }
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
hyper-rustls = { version = "0.22", optional = true }
tokio-rustls = { version = "0.22", optional = true }
hyper-socks2 = { version = "0.6", default-features = false }
is-macro = "0.1.8"
tracing = "0.1"
tracing-futures = "0.2"
paste = "1"

[dev-dependencies]
meval = "0.2"
rand = "0.8"

[features]
proxy = []
rustls = ["hyper-proxy/rustls", "hyper-socks2/rustls", "tokio-rustls", "hyper-rustls"]
tls = ["hyper-proxy/tls", "hyper-socks2/tls", "native-tls", "tokio-native-tls", "hyper-tls"]
default = ["tls"]

[[example]]
name = "attachments"
required-features = ["tokio/macros"]

[[example]]
name = "commands"
required-features = ["tokio/macros"]

[[example]]
name = "download"
required-features = ["tokio/macros"]

[[example]]
name = "entities"
required-features = ["tokio/macros"]

[[example]]
name = "echo"
required-features = ["tokio/macros"]

[[example]]
name = "game"
required-features = ["tokio/macros", "tokio/sync"]

[[example]]
name = "get_me"
required-features = ["tokio/macros"]

[[example]]
name = "keyboard"
required-features = ["tokio/macros"]

[[example]]
name = "location"
required-features = ["tokio/macros"]

[[example]]
name = "messenger"
required-features = ["tokio/macros", "tokio/sync"]

[[example]]
name = "payment"
required-features = ["tokio/macros"]

[[example]]
name = "polls"
required-features = ["tokio/macros"]

[[example]]
name = "proxy"
required-features = ["tokio/macros"]

[[example]]
name = "predicates"
required-features = ["tokio/macros"]

[[example]]
name = "questionary"
required-features = ["tokio/macros", "tokio/sync"]

[[example]]
name = "sticker_packs"
required-features = ["tokio/macros"]

[[example]]
name = "tutorial"
required-features = ["tokio/macros", "tokio/sync"]

[[example]]
name = "webhook"
required-features = ["tokio/macros"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
