[package]
name = "tbot"
version = "0.6.7"
description = "Make cool Telegram bots with Rust easily."
repository = "https://gitlab.com/SnejUgal/tbot"
readme = "./readme.md"
license = "MIT"
authors = [
    "SnejUgal <contact@snejugal.ru>",
    "AlexStrNik <contact@alexstrnik.ru>",
]
edition = "2018"
keywords = [
    "telegram",
    "telegram-bot",
    "telegram-bot-api",
]
categories = [
    "api-bindings",
    "asynchronous",
]
exclude = ["examples"]

[dependencies]
hyper = { version = "0.14.2", features = ["client", "http1", "server"], default-features = false }
hyper-proxy = { version = "0.9", default-features = false }
tokio = { version = "1", features = ["time", "rt", "net", "fs"] }
futures = "0.3"
serde_json = "1"
serde = { version = "1.0.34", features = ["derive"] }
hyper-tls = { version = "0.5",  optional = true }
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
hyper-rustls = { version = "0.22", optional = true }
tokio-rustls = { version = "0.22", optional = true }
hyper-socks2 = { version = "0.6", default-features = false }
is-macro = "0.1.8"
tracing = "0.1"
tracing-futures = "0.2"
type-map = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["time", "macros", "rt", "rt-multi-thread", "net", "fs"] }
meval = "0.2"
rand = "0.8"

[features]
proxy = []
rustls = ["hyper-proxy/rustls", "hyper-socks2/rustls", "tokio-rustls", "hyper-rustls"]
tls = ["hyper-proxy/tls", "hyper-socks2/tls", "native-tls", "tokio-native-tls", "hyper-tls"]
default = ["tls"]

[[example]]
name = "attachments"

[[example]]
name = "commands"

[[example]]
name = "download"

[[example]]
name = "echo"

[[example]]
name = "game"
required-features = ["tokio/sync"]

[[example]]
name = "get_me"

[[example]]
name = "keyboard"

[[example]]
name = "location"

[[example]]
name = "messenger"
required-features = ["tokio/sync"]

[[example]]
name = "payment"

[[example]]
name = "polls"

[[example]]
name = "proxy"

[[example]]
name = "predicates"

[[example]]
name = "questionary"
required-features = ["tokio/sync"]

[[example]]
name = "sticker_packs"

[[example]]
name = "tutorial"
required-features = ["tokio/sync"]

[[example]]
name = "webhook"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
